Last today's changes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=C:\\Users\\pawel_000\\Desktop\\eclipse\\hibernate-jpa-2.0-api-1.0.1.Final.jar
-file.reference.spring-security-core-3.1.0.RELEASE.jar=C:\\Users\\pawel_000\\Desktop\\eclipse\\spring-security-core-3.1.0.RELEASE.jar
+file.reference.iText-5.0.6.jar=C:\\Users\\pawel_000\\Desktop\\ERPDesktopVersion\\iText-5.0.6.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -40,12 +40,9 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.struts2lib-2-3-15.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.hibernate4-persistencemodelgen.classpath}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${libs.spring-framework400.classpath}:\
-    ${file.reference.spring-security-core-3.1.0.RELEASE.jar}
+    ${file.reference.iText-5.0.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
