--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,12 @@ dist.jar=${dist.dir}/JavaFX+Hibernate-Warehouse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-dbcp-1.4-javadoc.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-dbcp-1.4-javadoc.jar
+file.reference.commons-dbcp-1.4-sources.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-dbcp-1.4-sources.jar
+file.reference.commons-dbcp-1.4.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-dbcp-1.4.jar
+file.reference.commons-pool-1.6-javadoc.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-pool-1.6-javadoc.jar
+file.reference.commons-pool-1.6-sources.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-pool-1.6-sources.jar
+file.reference.commons-pool-1.6.jar=C:\\Users\\pawel_000\\Desktop\\Spring + Hibernate\\commons-pool-1.6.jar
 file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=C:\\Users\\pawel_000\\Desktop\\eclipse\\hibernate-jpa-2.0-api-1.0.1.Final.jar
 file.reference.iText-5.0.6.jar=C:\\Users\\pawel_000\\Desktop\\ERPDesktopVersion\\iText-5.0.6.jar
 includes=**
@@ -42,7 +48,15 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.hibernate4-persistencemodelgen.classpath}:\
-    ${file.reference.iText-5.0.6.jar}
+    ${file.reference.iText-5.0.6.jar}:\
+    ${libs.spring-webmvc4.0.classpath}:\
+    ${libs.spring-framework400.classpath}:\
+    ${file.reference.commons-dbcp-1.4-javadoc.jar}:\
+    ${file.reference.commons-dbcp-1.4-sources.jar}:\
+    ${file.reference.commons-dbcp-1.4.jar}:\
+    ${file.reference.commons-pool-1.6-javadoc.jar}:\
+    ${file.reference.commons-pool-1.6-sources.jar}:\
+    ${file.reference.commons-pool-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
